add - extract-text-webpack-plugin

--- a/example/bienna.html
+++ b/example/bienna.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bienna Example</title>
+  <link rel="stylesheet" href="../bin/bienna.css">
 </head>
 <body>
 
